--- a/next_app/package.json
+++ b/next_app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.16.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
@@ -17,6 +18,7 @@
     "@tailwindcss/typography": "^0.5.13",
     "daisyui": "^4.12.10",
     "postcss": "^8",
+    "prisma": "^5.16.2",
     "tailwindcss": "^3.4.1"
   }
 }
